@@ -1,5 +1,5 @@
 ﻿// <copyright file="NativeRealtimeMultiplayerClient.cs" company="Google Inc.">
-// Copyright (C) 2014 Google Inc.
+// Copyright (C) 2014 Google Inc.  All Rights Reserved.
 //
 //  Licensed under the Apache License, Version 2.0 (the "License");
 //  you may not use this file except in compliance with the License.
@@ -69,6 +69,10 @@ namespace GooglePlayGames.Native
 
                 mCurrentSession = newSession;
 
+                //Quickgames start when there is the min number of players
+                Logger.d("QuickGame: Setting MinPlayersToStart = " + minOpponents);
+                mCurrentSession.MinPlayersToStart = minOpponents;
+
                 // We're holding the session lock, so no other threads could have torn down the session
                 // in the meantime.
 
@@ -135,6 +139,12 @@ namespace GooglePlayGames.Native
                             return;
                         }
 
+
+                        mCurrentSession.MinPlayersToStart = 
+                            response.MinimumAutomatchingPlayers() + (uint)response.Count()
+                        // plus self
+                            + 1;
+
                         using (var configBuilder = RealtimeRoomConfigBuilder.Create())
                         {
                             configBuilder.SetVariant(variant);
@@ -151,6 +161,14 @@ namespace GooglePlayGames.Native
 
                         }
                     });
+            }
+        }
+
+        public void ShowWaitingRoomUI()
+        {
+            lock (mSessionLock)
+            {
+                mCurrentSession.ShowWaitingRoomUI();
             }
         }
 
@@ -233,6 +251,12 @@ namespace GooglePlayGames.Native
                             {
                                 if (invitation.Id().Equals(invitationId))
                                 {
+                                   
+                                    mCurrentSession.MinPlayersToStart = 
+                                        invitation.AutomatchingSlots() + 
+                                        invitation.ParticipantCount();
+                                    Logger.d("Setting MinPlayersToStart with invitation to : " +
+                                        mCurrentSession.MinPlayersToStart);
                                     using (var helper = HelperForSession(newRoom))
                                     {
                                         newRoom.StartRoomCreation(mNativeClient.GetUserId(),
@@ -338,6 +362,10 @@ namespace GooglePlayGames.Native
             {
             }
 
+            public void OnParticipantLeft(Participant participant)
+            {
+            }
+
             public void OnPeersConnected(string[] participantIds)
             {
             }
@@ -374,6 +402,8 @@ namespace GooglePlayGames.Native
             private volatile State mState;
             private volatile bool mStillPreRoomCreation;
 
+            private uint mMinPlayersToStart;
+
             internal RoomSession(RealtimeManager manager, RealTimeMultiplayerListener listener)
             {
                 mManager = Misc.CheckNotNull(manager);
@@ -381,6 +411,18 @@ namespace GooglePlayGames.Native
 
                 EnterState(new BeforeRoomCreateStartedState(this));
                 mStillPreRoomCreation = true;
+            }
+
+            internal uint MinPlayersToStart
+            {
+                get
+                {
+                    return mMinPlayersToStart;
+                }
+                set 
+                {
+                    mMinPlayersToStart = value;
+                }
             }
 
             internal RealtimeManager Manager()
@@ -425,6 +467,11 @@ namespace GooglePlayGames.Native
                 {
                     mState.LeaveRoom();
                 }
+            }
+
+            internal void ShowWaitingRoomUI()
+            {
+                mState.ShowWaitingRoomUI(MinPlayersToStart);
             }
 
             /// <summary>
@@ -592,6 +639,12 @@ namespace GooglePlayGames.Native
                 PlayGamesHelperObject.RunOnGameThread(
                     () => mListener.OnRealTimeMessageReceived(isReliable, senderId, data));
             }
+
+            public void ParticipantLeft(Participant participant)
+            {
+                PlayGamesHelperObject.RunOnGameThread(
+                    () => mListener.OnParticipantLeft(participant));
+            }
         }
 
         /// <summary>
@@ -614,6 +667,11 @@ namespace GooglePlayGames.Native
             internal virtual void LeaveRoom()
             {
                 Logger.d(this.GetType().Name + ".LeaveRoom: Defaulting to no-op.");
+            }
+
+            internal virtual void ShowWaitingRoomUI(uint minimumParticipantsBeforeStarting)
+            {
+                Logger.d(this.GetType().Name + ".ShowWaitingRoomUI: Defaulting to no-op.");
             }
 
             internal virtual void OnStateEntered()
@@ -899,7 +957,7 @@ namespace GooglePlayGames.Native
                 : base(session, room)
             {
                 mPercentPerParticipant =
-                (100.0f - InitialPercentComplete) / (float)room.ParticipantCount();
+                    (100.0f - InitialPercentComplete) / (float)session.MinPlayersToStart;
             }
 
             internal override void OnStateEntered()
@@ -910,6 +968,21 @@ namespace GooglePlayGames.Native
             internal override void HandleConnectedSetChanged(NativeRealTimeRoom room)
             {
                 HashSet<string> newConnectedSet = new HashSet<string>();
+
+                // handle when an invitation is received, so number of total 
+                // participants is not known.
+                if (room.Status() == Types.RealTimeRoomStatus.AUTO_MATCHING ||
+                    room.Status() == Types.RealTimeRoomStatus.CONNECTING)
+                {
+                    if (mSession.MinPlayersToStart <= room.ParticipantCount())
+                    {
+                        mSession.MinPlayersToStart = mSession.MinPlayersToStart +
+                        room.ParticipantCount();
+                        mPercentPerParticipant = 
+                            (100.0f - InitialPercentComplete) / (float)mSession.MinPlayersToStart;
+                    }
+                }
+
 
                 foreach (var participant in room.Participants())
                 {
@@ -931,14 +1004,14 @@ namespace GooglePlayGames.Native
 
                 var noLongerConnected = mConnectedParticipants.Except(newConnectedSet);
 
-                // Check whether a participant that was in the connected set has left it.
-                // If so, we will never reach a fully connected state, and should fail room
+                // Check if the room has been deleted.
                 // creation.
-                if (noLongerConnected.Any())
+                if (room.Status() == Types.RealTimeRoomStatus.DELETED)
                 {
                     Logger.e("Participants disconnected during room setup, failing. " +
                         "Participants were: " + string.Join(",", noLongerConnected.ToArray()));
-                    LeaveRoom();
+                    mSession.OnGameThreadListener().RoomConnected(false);
+                    mSession.EnterState(new ShutdownState(mSession));
                     return;
                 }
 
@@ -948,7 +1021,7 @@ namespace GooglePlayGames.Native
                     string.Join(",", newlyConnected.ToArray()));
 
                 // If we're fully connected, transition to the Active state and signal the client.
-                if (newConnectedSet.Count() == room.ParticipantCount())
+                if (room.Status() == Types.RealTimeRoomStatus.ACTIVE)
                 {
                     Logger.d("Fully connected! Transitioning to active state.");
                     mSession.EnterState(new ActiveState(room, mSession));
@@ -971,15 +1044,44 @@ namespace GooglePlayGames.Native
                     return;
                 }
 
-                Logger.e(string.Format("Participant {0} changed to status {1}, room will never be" +
-                        "fully connected.", participant.Id(), participant.Status()));
-                LeaveRoom();
+                // call PeersDisconnected when the player leaves or declines
+                // this let's the caller know that someone declined.
+                mSession.OnGameThreadListener().ParticipantLeft(participant.AsParticipant());
+
+                if (room.Status() != Types.RealTimeRoomStatus.CONNECTING &&
+                    room.Status() != Types.RealTimeRoomStatus.AUTO_MATCHING)
+                {
+                    LeaveRoom();
+                }
             }
 
             internal override void LeaveRoom()
             {
                 mSession.EnterState(new LeavingRoom(mSession, mRoom,
                         () => mSession.OnGameThreadListener().RoomConnected(false)));
+            }
+
+            internal override void ShowWaitingRoomUI(uint minimumParticipantsBeforeStarting)
+            {
+                mSession.Manager().ShowWaitingRoomUI(mRoom, minimumParticipantsBeforeStarting, response =>
+                    {
+                        Logger.d("ShowWaitingRoomUI Response: " + response.ResponseStatus());
+                        if(response.ResponseStatus() == Status.UIStatus.VALID) {
+                            Logger.d("Connecting state ShowWaitingRoomUI: room pcount:" + response.Room().ParticipantCount() +
+                                " status: " + response.Room().Status());
+                            if (response.Room().Status() == Types.RealTimeRoomStatus.ACTIVE) {
+                            mSession.EnterState(new ActiveState(response.Room(), mSession));
+                            mSession.OnGameThreadListener().RoomConnected(true);
+                            }
+                        }
+                        else if(response.ResponseStatus() == Status.UIStatus.ERROR_LEFT_ROOM){
+                            LeaveRoom();
+                        }
+                        else {
+                            mSession.OnGameThreadListener().RoomSetupProgress(this.mPercentComplete);
+                        }
+                       
+                    });
             }
         }
 
@@ -1157,8 +1259,10 @@ namespace GooglePlayGames.Native
 
             internal override void OnStateEntered()
             {
-                mSession.Manager().LeaveRoom(mRoomToLeave, (status) => mLeavingCompleteCallback());
-                mSession.EnterState(new ShutdownState(mSession));
+                mSession.Manager().LeaveRoom(mRoomToLeave, (status) => 
+                    { mLeavingCompleteCallback();
+                        mSession.EnterState(new ShutdownState(mSession));
+                    } );
             }
         }
 
