@@ -1,5 +1,5 @@
 // <copyright file="NativeTurnBasedMatch.cs" company="Google Inc.">
-// Copyright (C) 2014 Google Inc.
+// Copyright (C) 2014 Google Inc.  All Rights Reserved.
 //
 //  Licensed under the Apache License, Version 2.0 (the "License");
 //  you may not use this file except in compliance with the License.
@@ -115,15 +115,20 @@ namespace GooglePlayGames.Native.PInvoke
 
         internal bool HasRematchId()
         {
-            return C.TurnBasedMatch_HasRematchId(SelfPtr());
+            string rematchId = RematchId();
+            return string.IsNullOrEmpty(rematchId) ||  !rematchId.Equals("(null)");
         }
 
         internal string RematchId()
         {
-            if (!HasRematchId())
-            {
-                return null;
-            }
+            // There is a bug in C++ for android that always returns true for
+            // HasRematchId - so commenting out this optimization until it is 
+            // fixed.
+            //if (!HasRematchId())
+            //{
+            //    Logger.d("Returning NUll for rematch id since it does not have one");
+            //    return null;
+            //}
 
             return PInvokeUtilities.OutParamsToString(
                 (out_string, size) => C.TurnBasedMatch_RematchId(SelfPtr(), out_string, size));
